# bio-eval

./: .gitignore
docs/: example.md  snomed_corpus.md
python/: README.md  pyproject.toml  requirements.txt  setup.py
python/src/bioeval/constants/: general.py
python/src/bioeval/snomed/: clm.py  dataset.py  evaluator.py  mlm.py
scripts/analyze/: snomed_multiple.py  snomed_multiple_plot.py  snomed_multiple_table.py  snomed_single.py
scripts/evaluate/: snomed.py
scripts/run/: run_english.sh  run_spanish.sh
scripts/runs/: run_english.sh  run_spanish.sh
scripts/snomed_build_es/: snomed_g_graphdb_build_tools.py  snomed_g_lib_rf2.py
scripts/snomed_corpus/: analysis_concepts.py  analysis_concepts_csvs.bash  analysis_description_count_en.cql  analysis_description_count_es.cql  analysis_relations.py  generate_corpus.py  group_corpus.py  prompting_map_en.json  prompting_map_es.json
scripts/snomed_queries/: query_body_structure.cql  query_clinical_drug.cql  query_disorder.cql  query_environment.cql  query_ethnic_group.cql  query_event.cql  query_findings.cql  query_geographic_location.cql  query_life_style.cql  query_morphologic_abnormality.cql  query_observable_entity.cql  query_occupation.cql  query_organism.cql  query_person.cql  query_pharmaceutical_biologic_product.cql  query_physical_force.cql  query_physical_object.cql  query_procedure.cql  query_qualifier_value.cql  query_racial_group.cql  query_record_artifact.cql  query_regime_therapy.cql  query_religion_philosophy.cql  query_situation.cql  query_social_concept.cql  query_specimen.cql  query_substance.cql  (+1 more)
