
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioeval"
version = "0.0.1"
authors = [
    { name="Asier Gutierrez-Fandino", email="asierguti96@gmail.com" }
]
description = "Biomedical LM evaluation framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/asier-gutierrez/bio-eval"
"Bug Tracker" = "https://github.com/asier-gutierrez/bio-eval/issues"

[tool.pytest.ini_options]
python_files = ["test/*.py"]
testpaths = ["test"]